--- a/package.json
+++ b/package.json
@@ -137,7 +137,11 @@
     ],
     "plugins": [
       [
-        "import",{"libraryName":"antd","style":"css"}
+        "import",
+        {
+          "libraryName": "antd",
+          "style": "css"
+        }
       ]
     ]
   },
@@ -145,6 +149,7 @@
     "babel-plugin-import": "^1.13.0",
     "react-dev-utils": "^10.0.0",
     "webpack-bundle-analyzer": "^3.6.0",
-    "webpack-cli": "^3.3.10"
+    "webpack-cli": "^3.3.10",
+    "webpackbar": "^4.0.0"
   }
 }
